--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -130,7 +130,7 @@ a few basic aspects of a plot that we need to specify:
     - to create a geometric object, we use a `geom_*` function (see the [ggplot reference](https://ggplot2.tidyverse.org/reference/) for a list of geometric objects)
     - here, we use the `geom_point` function to visualize our data as a scatterplot
 
- We can see in Figure \@ref(fig:03-ggplot-function-scatter) how each of these aspects maps to our code for creating a basic scatter plot for our `co2_df` data. 
+ We can see in Figure \@ref(fig:03-ggplot-function-scatter) how each of these aspects map to our code for creating a basic scatter plot for our `co2_df` data. 
 ```{r 03-ggplot-function-scatter, echo=FALSE, fig.cap = "Creating a scatterplot with the ggplot function", message =F}
 knitr::include_graphics("img/ggplot_function_scatter.jpeg")
 ```
@@ -155,7 +155,7 @@ co2_line <- ggplot(co2_df, aes(x = date_decimal, y = ppm)) +
 co2_line
 ```
 
-Aha! There *is* another interesting phenomenon in the data: in addition to increasing over time, the concentration seems to oscillate as well. 
+Aha! Figure \@ref(fig:03-data-co2-line) shows us there *is* another interesting phenomenon in the data: in addition to increasing over time, the concentration seems to oscillate as well. 
 Given the visualization as it is now, it is still hard to tell how fast the oscillation is, but nevertheless, the line seems to
 be a better choice for answering the question than the scatter plot was. The comparison between these two visualizations illustrates a common issue with 
 scatter plots: often, the points are shown too close together or even on top of one another, muddling information that would otherwise be clear (*overplotting*).
@@ -293,9 +293,9 @@ faithful_scatter
 
 ### The Canadian languages data set
 
-We will return to the `canlang` data set, which contains counts of languages from the 2016 Canadian census.
+We will return to the `can_lang` data set, which contains counts of languages from the 2016 Canadian census.
 
-**Question:** Is there a relationship between the number of people who speak a language as their mother tongue and the number of people who speak that language as their primary spoken language at home? And is there a pattern in the strength of this relationship in the higher level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)?
+**Question:** Is there a relationship between the number of people who speak a language as their mother tongue and the number of people who speak that language as their primary spoken language at home? And is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)?
 
 ```{r 03-canlang-example, message = F, warning = F}
 can_lang <- read_csv("data/can_lang.csv")
@@ -308,8 +308,7 @@ We will begin with a scatter plot of the `mother_tongue` and `most_at_home` colu
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   geom_point()
 ``` 
-To improve the interpretability of the data visualization that we created we should replace the default axis names with a more
-informative labels. 
+To improve the interpretability of the data visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home) we should replace the default axis names with a more informative labels. 
 
 ```{r mother-tongue-vs-most-at-home-labs, fig.width=5.75, fig.height=5, warning=FALSE, fig.cap = "Scatter plot of number of Canadians reporting a language as their mother tongue vs the primary language at home with x and y labels"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
@@ -318,12 +317,13 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   ylab("Mother tongue (number of Canadian residents)")
 ```
 
-Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-labs). The data clumped is because many more people in Canada speak the the two languages represented by the points in the top right corner. We can confirm the two points in the upper right corner of the visualization are the two official languages (English and French) by filtering the data:
+Most of the data points from the 214 observations in this data set are bunched up in the lower left-handside of the visualization in Figure \@ref(fig:mother-tongue-vs-most-at-home-labs). The data is clumped because many more people in Canada speak the two languages represented by the points in the upper right corner. By filtering the data, we can confirm these two points correspond to the two official languages (English and French):
 
 ```{r english-mother-tongue}
 can_lang %>%
   filter(language == "English" | language == "French")
 ```
+> `|` is a logical operator representing "OR", which allows us to filter the rows where the language column is equal to "English" OR equal to "French". 
 
 To answer our question, we will need to adjust the scale of the x and y axes so that they are on a log scale:
 
@@ -345,22 +345,18 @@ english_mother_tongue <- can_lang %>%
 census_popn <- 35151728
 ```
 
-What does it mean that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` 
-people reported that their mother tongue was English in the 2016 Canadian census? To really understand this number, we need context. In particular, how many people were in Canada when this data was collected? From the 2016 Canadian census profile, we can see that the population was reported to be `r format(census_popn, scientific = FALSE, big.mark = ",")` people. The count of 
-the number of people who report that English is their mother tongue is much more 
-meaningful when we report it in this context. We can even go a step further and 
-transform this count to a relative frequency, or proportion, so that we can 
-represent this as a single meaningful number in our data visualizations. We can 
-do this by dividing the number of people reporting a given language as their 
-mother tongue by the number of people who live in Canada. For example, the 
-proportion of people who reported that their mother tongue was English in the 
+We saw that `r format(english_mother_tongue, scientific = FALSE, big.mark = ",")` people reported that their mother tongue was English in the 2016 Canadian census, but what does this number really mean? To really understand this number, we need context. In particular, how many people were in Canada when this data was collected? From the 2016 Canadian census profile, we can see that the population was reported to be `r format(census_popn, scientific = FALSE, big.mark = ",")` people. The number of people who report that English is their mother tongue is much more meaningful when we report it in this context. We can even go a step further and transform this count to a relative frequency or proportion to represent this as a single meaningful number in our data visualizations. We can do this by dividing the number of people reporting a given language as their mother tongue by the number of people who live in Canada. For example, the proportion of people who reported that their mother tongue was English in the 
 2016 Canadian census was `r  format(english_mother_tongue, scientific = FALSE, big.mark = ",") ` / `r  format(census_popn, scientific = FALSE, big.mark = ",")` =
 `r format(round(english_mother_tongue/census_popn, 2), scientific = FALSE, big.mark = ",")`.
 
-Below we use mutate to calculate the proportion of people reporting a given language as their mother tongue and primary language at home for all the languages in the `can_lang` data set:
+Below we use `mutate` to calculate the proportion of people reporting a given language as their mother tongue and primary language at home for all the languages in the `can_lang` data set:
 
 ```{r}
-can_lang <- can_lang %>% mutate(mother_tongue = mother_tongue / 35151728, most_at_home = most_at_home / 35151728)
+can_lang <- can_lang %>%
+  mutate(
+    mother_tongue = mother_tongue / 35151728,
+    most_at_home = most_at_home / 35151728
+  )
 can_lang
 ```
 
@@ -375,13 +371,12 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue)) +
   scale_y_log10(labels = scales::comma)
 ```
 
-Changing the units to include this context increases our understanding and allows us to interpret the numbers in our data set better.
+Changing the units to include this context increases our understanding and allows us to better interpret the numbers in our data set.
 
-Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the 
-scatter plot we have already created by group/category. For example, given that we have the higher level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
+Now we'll move onto the second part of our exploratory data analysis question: when considering the relationship between the number of people who have a language as their mother tongue and the number of people who speak that language at home, is there a pattern in the strength of this relationship in the higher-level language categories (Official languages, Aboriginal languages, or non-official and non-Aboriginal languages)? One common way to explore this is to colour the data points on the scatter plot we have already created by group/category. For example, given that we have the higher-level language category for each language recorded in the 2016 Canadian census, we can colour the points in our previous 
 scatter plot to represent each language's higher-level language category.
 
-We will add an argument to the `aes` function, specifying that the points should be coloured by the `category` column:
+We will add an argument to the `aes` function, specifying that the `category` column should colour the points:
 
 ```{r scatter-colour-by-category, fig.width=7.75, fig.height=4, warning=FALSE,  fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
@@ -391,27 +386,40 @@ ggplot(can_lang, aes(x = most_at_home, y = mother_tongue, color = category)) +
   scale_x_log10(labels = scales::comma) +
   scale_y_log10(labels = scales::comma)
 ```
-From the visualization in Figure \@ref(fig:scatter-colour-by-category), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages (English and French) as their mother tongue and as the language they speak most often at home. 
 
-```{r}
-can_lang <- can_lang %>% 
-  filter(language == "English" | language == "French") %>% 
-  mutate(category = language) %>% 
-  bind_rows(can_lang %>% 
-  filter(language != "English" & language != "French"))
-```
+From the visualization in Figure \@ref(fig:scatter-colour-by-category), we can now clearly see that not just a lot, but that the majority of Canadians reported one of the official languages as their mother tongue and as the language they speak most often at home. 
 
 What do we see when considering the second part of our exploratory question? Do we see a difference in the pattern of the relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home between higher-level language categories? Probably not!
 
-For each higher-level language category there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
+For each higher-level language category, there appears to be a positive relationship between the number of people who speak a language as their mother tongue and the number of people who speak a language as their primary spoken language at home. This relationship looks similar, regardless of the category. 
 
 Does this mean that this relationship is positive for all languages in the world? Can we use this data visualization on its own to predict how many people have a given language as their mother tongue if we know how many people speak it as their primary language at home?
 
 The answer to both these questions is "no." However, with this exploratory data analysis, we can create new hypotheses, ideas,
 and questions (like the ones at the beginning of this paragraph). Answering those questions would likely involve gathering additional data and doing more complex analyses, which we will see more of later in this course.  
 
-We have added a few more layers to make the data visualization in Figure \@ref(fig:nachos-to-cheesecake) even more effective. Specifically we used have improved the visualizations accessibility by choosing colours that are easier to distinguish, mapped category to shape, and handled the problem of overlapping data points by making them slightly transparent.
+We can go one step further and distinguish English and French languages with different colours in our visualization. To separate these languages, we will filter for the rows where the language is either English or French and mutate the `category` column to equal the corresponding language. 
 
+```{r 03-separate-English-French}
+english_and_french <- can_lang %>%
+  filter(language == "English" | language == "French") %>%
+  mutate(category = language)
+english_and_french
+```
+
+Next we will bind the mutated data set `english_and_french` that we just created with the remaining rows in the `can_lang` data set:
+```{r 03-bind-english-french}
+can_lang <- bind_rows(
+  english_and_french,
+  can_lang %>%
+    filter(language != "English" & language != "French")
+)
+```
+
+> `!=` in R is a logical operator that means "NOT EQUAL TO".
+> `&` is a logical operator meaning "AND". We are filtering the `can_lang` data frame where the rows do not equal "English" and do not equal "French".  
+
+We have added a few more layers to make the data visualization in Figure \@ref(fig:nachos-to-cheesecake) even more effective. Specifically, we used have improved the visualizations accessibility by choosing colours that are easier to distinguish, mapped category to shape, and handled the problem of overlapping data points by making them slightly transparent. 
 ```{r nachos-to-cheesecake, fig.width=7.75, fig.height=4, warning=FALSE, message=FALSE, fig.cap = "Scatter plot of proportion of Canadians reporting a language as their mother tongue vs the primary language at home coloured by language category"}
 ggplot(can_lang, aes(
   x = most_at_home,
@@ -420,11 +428,11 @@ ggplot(can_lang, aes(
   shape = category
 )) + # map categories to different shapes
   geom_point(alpha = 0.6) + # set the transparency of the points
-  scale_color_manual(values = c("deepskyblue2", "firebrick1", "forestgreen", "black")) + # choose point colours
+  scale_color_manual(values = c("deepskyblue2", "firebrick1", "black", "forestgreen")) + # choose point colours
   xlab("Language spoken most at home (proportion of Canadian residents)") +
   ylab("Mother tongue (proportion of Canadian residents)") +
   scale_x_log10(labels = scales::comma) +
-  scale_y_log10(labels = scales::comma) 
+  scale_y_log10(labels = scales::comma)
 ```
 
 ### The Michelson speed of light data set
@@ -456,7 +464,7 @@ morley_hist <- ggplot(morley, aes(x = Speed)) +
 morley_hist
 ```
 
-This is a great start. However, we cannot tell how accurate the measurements are using this visualization unless we can see what the true value is.
+Figure \@ref(fig:03-data-morley-hist) is a great start. However, we cannot tell how accurate the measurements are using this visualization unless we can see what the true value is.
 In order to visualize the true speed of light, we will add a vertical line with the `geom_vline` function, setting the `xintercept` argument
 to the true value. There is a similar function, `geom_hline`, that is used for plotting horizontal lines. Note that *vertical lines*
 are used to denote quantities on the *horizontal axis*, while *horizontal lines* are used to denote quantities on the *vertical axis*. 
@@ -468,12 +476,10 @@ morley_hist <- ggplot(morley, aes(x = Speed)) +
 morley_hist
 ```
 
-We also still cannot tell which experiments (denoted in the `Expt` column) led to which measurements; perhaps some experiments were more accurate than
+In Figure \@ref(fig:03-data-morley-hist-2), we also still cannot tell which experiments (denoted in the `Expt` column) led to which measurements; perhaps some experiments were more accurate than
 others. To fully answer our question, we need to separate the measurements from each other visually. We can
 try to do this using a *coloured* histogram, where counts from different experiments are stacked on top of each
-other in different colours. We create a histogram coloured by the `Expt` variable by adding
-it to the `fill` aesthetic mapping. We make sure the different colours can 
-be seen (despite them all sitting on top of each other) by setting the `alpha` argument in `geom_histogram`
+other in different colours. We create a histogram coloured by the `Expt` variable by adding it to the `fill` aesthetic mapping. We make sure the different colours can be seen (despite them all sitting on top of each other) by setting the `alpha` argument in `geom_histogram`
 to `0.5` to make the bars slightly translucent:
 
 ```{r 03-data-morley-hist-3, warning=FALSE, message=FALSE, fig.cap = "Histogram of Michelson's speed of light data coloured by experiment"}
@@ -483,7 +489,10 @@ morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) +
 morley_hist
 ```
 
-Unfortunately, the attempt to separate out the experiment number visually has created a bit of a mess. All of the colours
+
+> Notice that we wrote `factor(Expt)` in the' fill' aesthetic mapping. A **factor** helps us represent categorical data. Factors can be ordered or unordered, and even though factors look like characters, they are integers underneath. They contain a set of values, known as **levels**. Storing something as a factor helps ensure that R will treat the data correctly. For instance, if we look at the printed `morley` data, the column `Expt` is an integer (we see the label `<int>` underneath the `Expt` column name). But, we want to treat it as a categorical variable, so we use the function `factor()` to make sure it is treated as such. 
+
+Unfortunately, the attempt to separate out the experiment number visually has created a bit of a mess. All of the colours in Figure \@ref(fig:03-data-morley-hist-3)
 are blending together, and although it is possible to derive *some* insight from this (e.g., experiments 1 and 3 had some 
 of the most incorrect measurements), it isn't the clearest way to convey our message and answer the question. Let's try a different strategy of 
 creating multiple separate histograms on top of one another. 
@@ -501,7 +510,7 @@ morley_hist <- ggplot(morley, aes(x = Speed, fill = factor(Expt))) +
 morley_hist
 ```
 
-The visualization now makes it quite clear how accurate the different experiments were with respect to one another. 
+The visualization in Figure \@ref(fig:03-data-morley-hist-4) now makes it quite clear how accurate the different experiments were with respect to one another. 
 There are two finishing touches to make this visualization even clearer. First and foremost, we need to add informative axis labels
 using the `labs` function, and increase the font size to make it readable using the `theme` function. Second, and perhaps more subtly, even though it 
 is easy to compare the experiments on this plot to one another, it is hard to get a sense 
@@ -519,8 +528,7 @@ morley_hist <- ggplot(morley_rel, aes(x = relative_accuracy, fill = factor(Expt)
 morley_hist
 ```
 
-Wow, impressive! These measurements of the speed of light from 1879 had errors around *0.05%* of the true speed. This shows
-you that even though experiments 2 and 5 were perhaps the most accurate, all of the experiments did quite an 
+Wow, impressive! These measurements of the speed of light from 1879 had errors around *0.05%* of the true speed. Figure \@ref(fig:03-data-morley-hist-5) shows you that even though experiments 2 and 5 were perhaps the most accurate, all of the experiments did quite an 
 admirable job given the technology available at the time.
 
 
